--- a/gamestore/views/shoppingcart.html
+++ b/gamestore/views/shoppingcart.html
@@ -50,31 +50,38 @@
                     <div class="titulo-juego">Call of Duty
                     </div>
                     <p>PS4/ PS5 / PC</p>
-                    <div class="precio">$35</div>
                 </div>
-                <button id="sumar-Addon"><a href="#" class="sumar-Addon">Sumale un add-on</a></button>
-                <button type="submit" value=1 id="boton-remove"><div id="remove">Eliminar</div></button>
+                <div class="precio">$35</div>
+                <div class="botonera-carrito">
+                    <button id="sumar-Addon"><a href="#" class="sumar-Addon">Sumale un add-on</a></button>
+                    <button type="submit" value=1 id="boton-remove"><div id="remove">Eliminar</div></button>
+                </div>
             </article>
             <article>
                 <div class="contenedor-imagenes"><img src="/images/nine-shopcart.jpg" alt="juego"></div>
                 <div class="titulo-descripcion">
                     <div class="titulo-juego">Nine Witches</div>
                     <p>PS4/ PS5 / PC</p>
-                    <div class="precio">$20</div>
                 </div>
-                <button id="sumar-Addon"><a href="#" class="sumar-Addon">Sumale un add-on</a></button>
-                <button type="submit" value=1 id="boton-remove"><div id="remove">Eliminar</div></button>
+                <div class="precio">$20</div>
+                <div class="botonera-carrito">
+                    <button id="sumar-Addon"><a href="#" class="sumar-Addon">Sumale un add-on</a></button>
+                    <button type="submit" value=1 id="boton-remove"><div id="remove">Eliminar</div></button>
+                </div>
             </article>
             <article>
                 <div class="contenedor-imagenes"><img src="/images/limbo-shopcart.jpg" alt="juego"></div>
                 <div class="titulo-descripcion">
                     <div class="titulo-juego">LIMBO</div>
                     <p>PS4/ PS5 / PC</p>
-                    <div class="precio">$8</div>
                 </div>
-                <button id="sumar-Addon"><a href="#" class="sumar-Addon">Sumale un add-on</a></button>
-                <button type="submit" value=1 id="boton-remove"><div id="remove">Eliminar</div></button>
+                <div class="precio">$8</div>
+                <div class="botonera-carrito">
+                    <button id="sumar-Addon"><a href="#" class="sumar-Addon">Sumale un add-on</a></button>
+                    <button type="submit" value=1 id="boton-remove"><div id="remove">Eliminar</div></button>
+                </div>
             </article>
+
         </div>
         <div class="contenedor-caja-totales">
             <div class="contenedor-flex-caja">
