--- a/gamestore/views/productDetail.html
+++ b/gamestore/views/productDetail.html
@@ -61,31 +61,31 @@
             </div>
         </article>
         <section class="requisitos">
-            <div class="tecnicos">
+            <article class="tecnicos">
             <h4>Datos técnicos</h4>
-            <article class="datos-tecnicos">
-            <p>1 jugador</p>
-            <p>Plataforma: PS4/PS5/PC</p>
-            <p>Lanzamiento: 4/12/2020</p>
-            <p>Editor: BLOWFISH STUDIOS PTY LTD</p>
-            <p>Género: Aventura</p>
-            <p>Idiomas de pantalla: Alemán, Chino - Simplificado, Chino - Tradicional, Español, Francés (Francia), Inglés, Portugués (Brasil), Ruso.</p>
+                <div class="datos-tecnicos">
+                    <p>1 jugador</p>
+                    <p>Plataforma: PS4/PS5/PC</p>
+                    <p>Lanzamiento: 4/12/2020</p>
+                    <p>Editor: BLOWFISH STUDIOS PTY LTD</p>
+                    <p>Género: Aventura</p>
+                    <p>Idiomas de pantalla: Alemán, Chino - Simplificado, Chino - Tradicional, Español, Francés (Francia), Inglés, Portugués (Brasil), Ruso.</p>
+                </article>
             </div>
-            </article>
             <article class="requisitos-pc">
             <h4>Requisitos del sistema</h4>
-            <h6>MÍNIMO:</h6>
             <div class="requisitos-min"> 
+                <h6>MÍNIMO:</h6>
                 <p>Requiere un procesador y un sistema operativo de 64 bits</p>
                 <p>SO: Windows 7</p>
                 <p>Procesador: Intel i5 Quad-Core</p>
                 <p>Memoria: 1 GB de RAM</p>
                 <p>Gráficos: Intel HD 4000</p>
                 <p>DirectX: Versión 10</p>
-                <p>Almacenamiento: 2 GB de espacio disponible</p>
-            </div>
+                <p>Almacenamiento: 2 GB de espacio disponible</p><br>
                 <h6>RECOMENDADO:</h6>
-                <p class="requisitos-min">Requiere un procesador y un sistema operativo de 64 bits</p>
+                <p>Requiere un procesador y un sistema operativo de 64 bits</p>
+                </div>
             </article>
     </section>
     </section>
