--- a/gamestore/views/productDetail.html
+++ b/gamestore/views/productDetail.html
@@ -60,6 +60,7 @@
                 <p class="esrb-detail">ESRB: Adolescentes</p>
             </div>
         </article>
+        </section>
         <section class="requisitos">
             <article class="tecnicos">
             <h4>Datos técnicos</h4>
