--- a/gamestore/views/productDetail.html
+++ b/gamestore/views/productDetail.html
@@ -53,7 +53,7 @@
         <p class="precio">$225</p>
         <article class="esrb-buy">
             <div class="buy">
-                <button>Agregar al carrito <i id="cart" class="fas fa-cart-plus"></i></button>
+                <button class="cart">Agregar al carrito <i class="fas fa-cart-plus"></i></button>
             </div>
             <div class="esrb">
                 <img class="esrb-photo" src="/images/ESRB-Teen.png" alt="ESRB Teen"><br>
@@ -126,6 +126,7 @@
             <a href="https://www.blowfishstudios.com/privacy">BLOWFISH STUDIOS PTY LTD Privacy Policy & EULA</a>
         </article>
     </section>
+    <button id="cart"><i class="fas fa-shopping-cart"></i></button>
 </main>
     <footer>
         <div>
