alinee barra de busqueda con log in

--- a/gamestore/public/css/styles-productDetail.css
+++ b/gamestore/public/css/styles-productDetail.css
@@ -290,7 +290,7 @@ footer {
         margin-right: 10px;
         font-family: 'Press Start 2P';
         font-size: 0.80em;
-        padding: 7px;
+        padding-bottom: 7px;
     }
     .menu-desplegable {
         display: none;
