--- a/gamestore/views/signUp.html
+++ b/gamestore/views/signUp.html
@@ -1,70 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href='/css/styles-signUp.css' rel="stylesheet">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
-        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
-        <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
-        <title>GameStore :: SignUp</title>
-    </head>
-    <body>
-        <header>
-            <div class="img-logo-header">
-                <img id="logo-header"src="/images/favicon-96x96.png" alt="GameStore">
-            </div>
-            <nav class="main-navbar">
-                <ul>
-                    <li class="primer-color">Plataforma <i class="fas fa-caret-down"></i></li>
-                    <li class="segundo-color">Edades <i class="fas fa-caret-down"></i></li>
-                    <li class="tercer-color">Dificultad <i class="fas fa-caret-down"></i></li>
-                    <li class="cuarto-color">Categorías <i class="fas fa-caret-down"></i></li>
-                </ul>
-            </nav>
-            <div class="barra-busqueda">
-                <input type="search" id="search"><br>
-                    <i id="find" class="fas fa-search"></i>
-                </div>
-                <div class="log-sign">Log in/ Sign up</div>
-            <div class= "menu-desplegable">
-                <i class="fas fa-caret-square-down"></i>
-            </div>
-        </header>
-        <main>
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='/css/styles-signUp.css' rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
+    <link rel="icon" type="image/png" sizes="96x96" href="/images/favicon-96x96.png">
+    <title>GameStore :: SignUp</title>
+</head>
 
-            
-        </main>
-        <footer>
+<body>
+    <header>
+        <div class="img-logo-header">
+            <img id="logo-header" src="/images/favicon-96x96.png" alt="GameStore">
+        </div>
+        <nav class="main-navbar">
+            <ul>
+                <li class="primer-color">Plataforma <i class="fas fa-caret-down"></i></li>
+                <li class="segundo-color">Edades <i class="fas fa-caret-down"></i></li>
+                <li class="tercer-color">Dificultad <i class="fas fa-caret-down"></i></li>
+                <li class="cuarto-color">Categorías <i class="fas fa-caret-down"></i></li>
+            </ul>
+        </nav>
+        <div class="barra-busqueda">
             <div>
-                <img class="img-logo-footer" src="/images/favicon-96x96.png" alt="GameStore"> 
+                <input type="search" id="search">
+                <i id="find" class="fas fa-search"></i><br>
             </div>
-            <div class="redes-sociales">
-                <i id="redes"class="fab fa-twitter-square"></i>
-                <i id="redes"class="fab fa-facebook-square"></i>
-                <i id="redes"class="fab fa-instagram-square"></i>
+            <div class="log-sign">
+                Log in
             </div>
-            <div class="links-footer">
-                <div class="first-column">
-                    <p>Publicar en GameStore</p>
-                    <p>Trabajá con nosotros</p>
-                    <p>Acerca de la compañía</p>
-                    <p>Política de privacidad</p>
-                </div>
-                <div class="second-column">
+        </div>
+        <div class="menu-desplegable">
+            <i class="fas fa-caret-square-down"></i>
+        </div>
+    </header>
+
+    <main>
+        <button id="cart"><i class="fas fa-shopping-cart"></i></button>
+        <form action="/registro" method="POST" class="registro-box">
+            <h1>
+                Formulario de Registro
+            </h1>
+            <br>
+            <section>
+                <article>
+                    <div>
+                        <label>Nombre</label><br>
+                        <input name="nombre" type="text" placholder="Tu Nombre" required>
+                    </div>
+
+                    <div>
+                        <label>Apellido</label><br>
+                        <input name="apellido" type="text" placholder="Tu Apellido" required>
+                    </div>
+                    <div>
+                        <label>DNI</label><br>
+                        <input name="dni" type="number" required>
+                    </div>
+                </article>
+
+                <br>
+
+                <article>
+                    <div>
+                        <label>Usuario</label><br>
+                        <input required placholder="Te dicen...." type="text" name="usuario">
+                    </div>
+
+                    <div>
+                        <label>Email</label><br>
+                        <input required placholder="..@dominio." type="email" name="email">
+                    </div>
+                </article>
+                <br>
+                <article>
+
+                    <div>
+                        <label>Clave</label><br>
+                        <input required placholder="" type="password" name="clave">
+                    </div>
+                    <div>
+                        <label>Confirmar Clave</label><br>
+                        <input required placholder="" type="password" name="clave2">
+                    </div>
+                </article>
+
+                <br>
+
+                <article>
+                    <div>
+                        <label>País</label><br>
+                        <select name="pais">
+                            <option selected>Argentina</option>
+                            <option>Brasil</option>
+                            <option>Uruguay</option>
+                            <option>China</option>
+                            <option>Mordor</option>
+                            <option>Polonia</option>
+                        </select>
+                    </div>
+                    <div>
+                        <label>Provincia</label><br>
+                        <select name="provincia">
+                            <option selected>CABA</option>
+                            <option>Che</option>
+                            <option>Como</option>
+                            <option>hago</option>
+                            <option>esto</option>
+                            <option>dependiente?</option>
+                        </select>
+                    </div>
+
+                </article>
+
+                <br>
+
+                <article>
+                    <div>
+                        <label>Dirección</label><br>
+                        <input type="text" name="direccion">
+                    </div>
+                    <div>
+                        <label>Numero</label><br>
+                        <input type="number" name="numero">
+                    </div>
+                    <div>
+                        <label>C.P.</label><br>
+                        <input type="number" name="cp">
+                    </div>
+                </article>
+
+                <br>
+
+                <article>
+                    <div>
+                        <input required type="checkbox" name="tcno" value="tyc"></input>
+                        <label>Acepto Términos y Condiciones</label>
+
+                        <br>
+
+                        <input type="checkbox" name="tyno" value="nyo"></button>
+                        <label>Me gustaria recibir noticias y ofertas especiales de GameStore</label>
+                    </div>
+                </article>
+
+                <br>
+
+
+
+                <button type="submit" class="send-buttom">Confirmar Registro</button>
+
+
+
+            </section>
+
+
+        </form>
+
+    </main>
+    <footer>
+        <div>
+            <img class="img-logo-footer" src="/images/favicon-96x96.png" alt="GameStore">
+        </div>
+        <div class="redes-sociales">
+            <i id="redes" class="fab fa-twitter-square"></i>
+            <i id="redes" class="fab fa-facebook-square"></i>
+            <i id="redes" class="fab fa-instagram-square"></i>
+        </div>
+        <div class="links-footer">
+            <div class="first-column">
+                <p>Publicar en GameStore</p>
+                <p>Trabajá con nosotros</p>
+                <p>Acerca de la compañía</p>
+                <p>Política de privacidad</p>
+            </div>
+            <div class="second-column">
                 <p>Política de reembolso de la tienda</p>
                 <p>Seguridad de la cuenta</p>
                 <p>Club GameStore</p>
                 <p>Newsletter</p>
             </div>
-            </div>
-            <div class="informacion-legal-footer">
-                © 2021, Game Store, Inc. Todos los derechos reservados. El logotipo de GameStore es una marca comercial o marca registrada de Game Store, Inc. tanto en Argentina como en el resto del mundo. Otras marcas o nombres de productos son marcas comerciales de sus respectivos propietarios. Las transacciones fuera de Argentina se realizan a través de GameStore International, S.A.   
-            </div>
-        </footer>
-    </body>
+        </div>
+        <div class="informacion-legal-footer">
+            © 2021, Game Store, Inc. Todos los derechos reservados. El logotipo de GameStore es una marca comercial o
+            marca registrada de Game Store, Inc. tanto en Argentina como en el resto del mundo. Otras marcas o nombres
+            de productos son marcas comerciales de sus respectivos propietarios. Las transacciones fuera de Argentina se
+            realizan a través de GameStore International, S.A.
+        </div>
+    </footer>
+</body>
+
 </html>
