--- a/public/css/styles-productDetail.css
+++ b/public/css/styles-productDetail.css
@@ -6,7 +6,7 @@
     padding: 0;
 }
 
-header {
+.header{
     background-color: #000;
     display: flex;
     justify-content: space-between;
@@ -53,7 +53,7 @@ header {
     display: none;
 }
 
-main {
+.main-mc {
     background-color: rgb(29, 26, 26);
     font-weight: bold;
     padding-bottom: 50px;
@@ -65,7 +65,7 @@ a:active {
     text-decoration: none;
 }
 
-.img-principal {
+.img-principal-mc {
     max-width: 70vw;
     padding: 0;
     border-radius: 5px;
@@ -74,11 +74,11 @@ a:active {
     margin-left: 15vw;
 }
 
-.img-principal:hover {
+.img-principal-mc:hover {
     box-shadow: 0px 0px 10px #FF00d6;
 }
 
-h4 {
+.h4-mc {
     text-align: center;
     margin: auto;
     margin-bottom: 20px;
@@ -90,7 +90,7 @@ h4 {
     box-shadow: 0px 0px 10px #FF00d6;
 }
 
-.precio {
+.precio-mc {
     background-color: rgba(0, 0, 0, 0.925);
     border-radius: 5px;
     text-align: center;
@@ -100,7 +100,7 @@ h4 {
     margin: 10px;
 }
 
-.precio:hover {
+.precio-mc:hover {
     box-shadow: 0px 0px 10px #FF00d6;
 }
 
@@ -110,11 +110,11 @@ h4 {
     max-width: 75vw;
 }
 
-.buy {
+.buy-mc {
     flex-wrap: wrap;
 }
 
-.cart {
+.cart-mc {
     background-color: #FF00d6;
     width: 200px;
     height: 35px;
@@ -127,7 +127,7 @@ h4 {
     margin-left: 15px;
 }
 
-button:active {
+.cart-mc:active {
     background-color: #8F4DB5;
     border-color: #8F4DB5;
     transition: 1000ms;
@@ -172,7 +172,7 @@ button:active {
     text-align: left;
 }
 
-.descripcion-producto,
+.descripcion-producto-mc,
 .requisitos-pc,
 .tecnicos {
     margin-left: auto;
@@ -212,7 +212,7 @@ button:active {
     font-size: 0.70rem;
 }
 
-.resumen {
+.resumen-mc {
     display: none;
 }
 
@@ -224,7 +224,7 @@ button:active {
     display: none;
 }
 
-.informacion-legal,
+.informacion-legal-developer,
 .informacion-legal-footer {
     margin-top: 20px;
     margin-left: 15px;
@@ -338,7 +338,7 @@ footer {
         opacity: 0.7;
         transition: all 1000ms;
     }
-    .main-descripcion {
+    .main-descripcion-mc {
         margin-top: 10px;
         width: 90vw;
         margin-left: 25px;
@@ -354,12 +354,12 @@ footer {
         left: 90%;
     }
 
-    .cart{
+    .cart-mc{
         margin-top: 40px;
         margin-right: 40px;
     }
 
-    .descripcion-producto {
+    .descripcion-producto-mc {
         margin-left: 5px;
         max-width: 50%;
     }
@@ -374,7 +374,7 @@ footer {
         padding-right: 20px;
     }
 
-    .precio {
+    .precio-mc {
         padding-top: 15px;
         padding-bottom: 15px;
         width: 200px;
@@ -478,7 +478,7 @@ footer {
         font-size: 0.85em;
     }
 
-    .main-descripcion{
+    .main-descripcion-mc{
         justify-content: center;
         width: 100vw;
         padding: 10px;
@@ -488,7 +488,7 @@ footer {
         background-color: rgba(36, 35, 35, 0.925)
     }
 
-    .descripcion-producto{
+    .descripcion-producto-mc{
         max-width: 300px;
     }
 
@@ -505,7 +505,7 @@ footer {
         margin-left: 150px;
     }
 
-    .precio {
+    .precio-mc {
         width: 450px;
         transition: all 1000ms;
     }
@@ -521,7 +521,7 @@ footer {
         left: 93%;
     }
 
-    .resumen {
+    .resumen-mc {
         padding: 10px;
         border-radius: 8px;
         max-width: 50%;
